--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
+:root {
+  --color-background: #f0f0f7;
+  --color-primary-lighter: #9871f5;
+  --color-primary-light: #916bea;
+  --color-primary: #8257e5;
+  --color-primary-dark: #774dd6;
+  --color-primary-darker: #6842c2;
+  --color-secondary: #04d361;
+  --color-secondary-dark: #04bf58;
+  --color-title-in-primary: #ffffff;
+  --color-text-in-primary: #d4c2ff;
+  --color-text-title: #32264d;
+  --color-text-complement: #9c98a6;
+  --color-text-base: #6a6180;
+  --color-line-in-white: #e6e6f0;
+  --color-input-background: #f8f8fc;
+  --color-button-text: #ffffff;
+  --color-box-base: #ffffff;
+  --color-box-footer: #fafafc;
+  --color-small-info: #c1bccc;
+  font-size: 60%;
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -8,6 +31,38 @@ body {
 h1 {
   margin: auto;
   margin-top: 8rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+button {
+  width: 15rem;
+  height: 6rem;
+  margin: 3rem auto;
+
+  border-radius: 0.8rem;
+
+  margin-bottom: 1.8rem;
+
+  border-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  text-decoration: none;
+
+  transition: background 0.2s;
+
+  background: var(--color-secondary);
+  color: var(--color-box-base);
+}
+
+button:hover {
+  background: var(--color-secondary-dark);
 }
 
 .content {
@@ -23,9 +78,13 @@ h1 {
   justify-content: space-around;
 }
 
+label {
+  font-size: 1.5rem;
+}
+
 .inputs input {
   width: 7rem;
-  height: 2rem;
+  height: 4rem;
 }
 
 .campo {
